@@ -1,4 +1,7 @@
 Verion 0.9.45dev (?? ??? 2004)
+  - Modified user-*.php to tell user either "no such user" or
+    "incorrect password".  This should help sysadmins trying to setup
+    WebCalendar figure out why a login is not working.
   - Fixed bug 1061702: site extras (reminder info) not showing up
     properly in event popups
   - Reorganizing styles.php to be more logical
